@@ -8,7 +8,7 @@
 <p align="center">
 <small>
 <a href="index.shtml">Mingw Home</a>            |
-<a href="http://sourceforge.net/project/showfiles.php?group_id=2435&release_id=15084">Download</a> |
+<a href="faq.shtml">Download</a> |
 <a href="docs.shtml">Documentation</a>          |
 <a href="mirrors.shtml">Mirror Sites</a>        |
 <a href="links.shtml">Related Sites</a>         |
@@ -21,4 +21,4 @@
 </small>
 </p>
 
-<!--$Id: bottombar.html,v 1.4 2000-12-26 21:44:46 earnie Exp $-->
+<!--$Id: bottombar.html,v 1.5 2001-02-10 20:48:54 earnie Exp $-->
