@@ -7,7 +7,7 @@
 
 <tr><td colspan="2"><a href="index.shtml">Mingw Home</a></td></tr>
 
-<tr><td colspan="2"><a href="http://sourceforge.net/project/showfiles.php?group_id=2435&release_id=15084">Download</a></td></tr>
+<tr><td colspan="2"><a href="faq.shtml">Download</a></td></tr>
 
 <tr><td colspan="2"><a href="docs.shtml">Documentation</a></td></tr>
 
@@ -31,4 +31,4 @@
 <tr><td colspan="2"><a href="history.shtml">Project History</a></td></tr>
 
 </table>
-<!--$Id: lsidebar.html,v 1.4 2000-12-26 21:44:46 earnie Exp $-->
+<!--$Id: lsidebar.html,v 1.5 2001-02-10 20:48:54 earnie Exp $-->
